update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Gold-Brick_67596
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67596-h/images/cover.jpg
 creator:
   author:
     agent_name: Whitlock, Brand
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/37861
     wikipedia: https://en.wikipedia.org/wiki/Brand_Whitlock
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67596#The-Gold-Brick
 gutenberg_issued: '2022-03-09'
 identifiers:
   gutenberg: '67596'
